# ros-use-pepper

./: README.md  Start Here.docx
Vracs/: README.txt
Worskspace/follow_ws/src/first-control/: CMakeLists.txt  README  package.xml
Worskspace/follow_ws/src/first-control/src/: grasping_test.cpp  head_hand_touching_say.cpp  mvt_arm.cpp  pub-square.cpp  simple_navigation_goals.cpp
Worskspace/follow_ws/src/pepper_tracking/: CMakeLists.txt  README  package.xml
Worskspace/follow_ws/src/pepper_tracking/Documentation/html/: annotated.html  asker_8cpp.html  asker_8cpp__incl.map  asker_8cpp__incl.md5  asker_8cpp_source.html  classasker-members.html  classasker.html  classes.html  classworker-members.html  classworker.html  dir_6267f7e9aae47a3e40f5d8157e5c29db.html  dir_891edd4f5f8fd0babef6011c5c29172f.html  dir_ab062960a34a7ddfc9d9d40b19e2a4df.html  dir_db69d41db8b47c9dca67743662de3592.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  index.html  tabs.css  worker_8cpp.html  worker_8cpp__incl.map  worker_8cpp__incl.md5  worker_8cpp_source.html
Worskspace/follow_ws/src/pepper_tracking/Documentation/html/search/: all_0.js  all_3.js  all_4.js  classes_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  searchdata.js
Worskspace/follow_ws/src/pepper_tracking/Documentation/latex/: annotated.tex  asker_8cpp.tex  asker_8cpp__incl.md5  classasker.tex  classworker.tex  dir_891edd4f5f8fd0babef6011c5c29172f.tex  dir_ab062960a34a7ddfc9d9d40b19e2a4df.tex  dir_db69d41db8b47c9dca67743662de3592.tex  files.tex  refman.tex  worker_8cpp.tex  worker_8cpp__incl.md5
Worskspace/follow_ws/src/pepper_tracking/msg/: image_request.msg  image_return.msg
Worskspace/follow_ws/src/pepper_tracking/src/: asker.cpp  worker.cpp
Worskspace/follow_ws/src/pepper_walking/: CMakeLists.txt
Worskspace/follow_ws/src/pepper_walking/Documentation/html/: annotated.html  classauto_walking-members.html  classauto_walking.html  classes.html  classsensor_info-members.html  classsensor_info.html  dir_6267f7e9aae47a3e40f5d8157e5c29db.html  dir_db69d41db8b47c9dca67743662de3592.html  dir_e5894e69c4f39c115bfe3cd8c9b74d31.html  dir_e92fd92cfea5ec77d2c4e9040ef2d839.html  doxygen.css  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  index.html  walking__autonomous_8cpp.html  walking__autonomous_8cpp__incl.map  walking__autonomous_8cpp__incl.md5  walking__autonomous_8cpp_source.html  walking__sensor__return_8cpp.html  walking__sensor__return_8cpp__incl.map  walking__sensor__return_8cpp__incl.md5  walking__sensor__return_8cpp_source.html
Worskspace/follow_ws/src/pepper_walking/Documentation/html/search/: all_0.js  all_2.js  all_3.js  all_6.js  all_7.js  all_9.js  classes_0.js  classes_1.js  files_0.js  functions_0.js  functions_1.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  search.css  searchdata.js
Worskspace/follow_ws/src/pepper_walking/Documentation/latex/: annotated.tex  classauto_walking.tex  classsensor_info.tex  dir_6267f7e9aae47a3e40f5d8157e5c29db.tex  dir_db69d41db8b47c9dca67743662de3592.tex  dir_e5894e69c4f39c115bfe3cd8c9b74d31.tex  dir_e92fd92cfea5ec77d2c4e9040ef2d839.tex  files.tex  refman.tex  walking__autonomous_8cpp.tex  walking__autonomous_8cpp__incl.md5  walking__sensor__return_8cpp.tex  walking__sensor__return_8cpp__incl.md5
Worskspace/follow_ws/src/pepper_walking/src/: walking_autonomous.cpp  walking_sensor_return.cpp
Worskspace/follow_ws/src/rosovbc/: CMakeLists.txt  README.txt  commandes_VS.txt  commands_rosaria.txt  package.xml
Worskspace/follow_ws/src/rosovbc/launch/: desired_image_manager.launch  insa_omni.launch  path_manager.launch  robot_joy.launch  test.launch  visual_path_following.launch  visual_path_following_with_pure_rotation.launch  visual_path_following_with_rotation.launch  visual_path_generation.launch  visual_path_generation_with_localization.launch  visual_servo_with_rotation.launch  visual_servo_with_rotation_Insa.launch  visual_servoing.launch  visual_servoing_Insa.launch  visual_servoing_with_kinect.launch
Worskspace/follow_ws/src/rosovbc/logs/: logfile.txt
Worskspace/follow_ws/src/rosovbc/src/: DesiredImageManager.cpp  DesiredImageManager.h  MEstimator_PhotoVisualServo.h  Master.h  Odometry.h  PathManager.cpp  PathManager.h  PathManagerEnhanced.h  PhotoVisualServo.h  Sonar.h  TeleopRobot.cpp  TeleopRobot.h  VCompass.h  VCompassAngleEstimation.h  VCompassDecoupled.h  VisualPathFollowing.h  VisualPathFollowingWithKinect.h  VisualPathFollowingWithPureRotation.cpp  VisualPathFollowingWithPureRotation.h  VisualPathFollowingWithRotation.h  VisualServoTools.cpp  VisualServoTools.h  VisualServoWithRotation.h  VisualServoing.h  VisualServoingWithKinect.cpp  VisualServoingWithKinect.h  main_desired_image_manager.cpp  main_odometry.cpp  main_path_manager.cpp  main_path_manager_enhanced.cpp  main_photo_visual_servo.cpp  main_sonar.cpp  main_teleop_robot.cpp  main_visual_path_following.cpp  main_visual_path_following_with_kinect.cpp  main_visual_path_following_with_pure_rotation.cpp  main_visual_path_following_with_rotation.cpp  main_visual_path_generation.cpp  main_visual_servo.cpp  main_visual_servo_with_rotation.cpp  (+6 more)
Worskspace/follow_ws/src/rosovbc/src/camera/: CCameraOmniParameters.cpp  CModel.cpp  CModel.h  CModelStereo.cpp  CModelStereo.h  CModelStereoXml.cpp  CModelStereoXml.h  CModelXml.cpp  CModelXml.h  COmniXml.cpp  COmniXml.h  CParaboloid.h  CPerspectiveXml.cpp  CPerspectiveXml.h  CXml.cpp  vpSubPixel.cpp  vpSubPixel.h
Worskspace/follow_ws/src/rosovbc/src/photometricVS/: CFeatureLuminanceOmni.cpp  CFeatureLuminanceOmni.h  CFeatureLuminanceOmniFeature.cpp  CFeatureLuminanceOmniFeatureDepth.cpp  CFeatureLuminanceOmniFeaturesd.cpp  CFeatureLuminanceOmniFeaturesdDepth.cpp  CFeatureLuminanceOmniInteractionMatrix.cpp  CFeatureLuminanceOmniNeighborhoods.cpp  CImageFilter.cpp  CImageFilter_copyInIncludeDir.h  CImageTools.cpp  CImageTools_copyInIncludeDir.h
docs/: Cpt rendu grasping test.docx  (+10 more)
(+55 files in other folders)
