<?xml version="1.0"?>
<package format="2">
  <name>pepper_tracking</name>
  <version>0.0.0</version>
  <description>The pepper_tracking package</description>

  <maintainer email="mis@todo.todo">mis</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend> 
  <build_depend>naoqi_bridge_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <build_export_depend>naoqi_bridge_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>naoqi_bridge_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
